--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,8 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
+appVersion: "0.1.0"
+description: Redis-Cluster is an advanced key-value cache and store. It is composed of slaves and master, ensuring stability and efficiency.
 name: redis-cluster
-version: 0.1.0
+version: 0.1.1
+icon: https://upload.wikimedia.org/wikipedia/commons/b/b4/SK_logo.svg
+keywords:
+- database
